apps/cce/cce-provisioning/overlays/aws-us-west-2-cc-smarsh-perf/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cce-provisioning
spec:
  hosts:
    - "cceprovisioning.ccemail-perf.internal.smarsh.us-west-2.aws.smarsh.cloud"
  gateways:
    - istio-ingress/apps-https-tcp-gw-ep-mt-smarsh-cc-perf
  http:
    - route:
        - destination:
            host: cce-provisioning
      match:
      - uri:
          prefix: "/"
